Changed the basic merge sort implementation to use pointers.

--- a/ProgrammingPractice/MergeSort/MergeSort.vcxproj
+++ b/ProgrammingPractice/MergeSort/MergeSort.vcxproj
@@ -140,6 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MergeSort.cpp" />
+    <ClCompile Include="MergeSortBasic.cpp" />
+    <ClCompile Include="MergeSortMultithreading.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MergeSortBasic.h" />
+    <ClInclude Include="MergeSortMultithreading.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
