--- a/ProgrammingPractice/Dijkstra'sAlgorithm/Dijkstra'sAlgorithm.vcxproj.filters
+++ b/ProgrammingPractice/Dijkstra'sAlgorithm/Dijkstra'sAlgorithm.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AStarAlgorithm.cpp">
+    <ClCompile Include="Dijkstra%27sAlgorithm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
